[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "An easily embeddable, futures-friendly logic engine."
documentation = "https://docs.rs/fall"
license = "Apache-2.0/MIT"
name = "fall"
readme = "README.md"
repository = "https://github.com/remexre/fall"
version = "0.1.3"

[dependencies]
failure = "0.1.2"
frunk = "0.2.0"
futures = "0.1.24"
lalrpop-util = { version = "0.16.0", optional = true }
lazy_static = "1.1.0"
regex = "1.0.5"

[build-dependencies]
lalrpop = { version = "0.16.0", optional = true }

[features]
default = ["parser"]
parser = ["lalrpop", "lalrpop-util"]
